--- a/index.html
+++ b/index.html
@@ -1,254 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MLE Runner – Mission Locale</title>
-  <style>
-    :root{
-      --bleu:#1e88e5;
-      --jaune:#fdd835;
-      --rouge:#e53935;
-      --blanc:#ffffff;
-      --fond:#f5f7fb;
-      --orange:#ffb74d;
-    }
-    *{box-sizing:border-box;font-family:Arial, Helvetica, sans-serif}
-    body{
-      margin:0;
-      background:linear-gradient(180deg,#e3f2fd,#ffffff);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      min-height:100vh;
-    }
-    #gameContainer{
-      width:100%;
-      max-width:900px;
-      background:var(--blanc);
-      border-radius:16px;
-      box-shadow:0 10px 30px rgba(0,0,0,0.1);
-      overflow:hidden;
-    }
-    header{
-      background:var(--bleu);
-      color:white;
-      padding:10px 16px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      font-size:14px;
-    }
-    #score{font-weight:bold}
-    #consigne{font-size:12px;opacity:0.9}
-    canvas{display:block;background:var(--fond)}
-
-    /* Écrans */
-    .overlay{
-      position:absolute;
-      inset:0;
-      background:rgba(255,255,255,0.95);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      padding:20px;
-    }
-    .box{
-      max-width:600px;
-      width:100%;
-      background:white;
-      border-radius:16px;
-      padding:24px;
-      box-shadow:0 8px 20px rgba(0,0,0,0.15);
-      text-align:center;
-    }
-    .box h1{color:var(--bleu);margin-top:0}
-    .box p{color:#333}
-    button{
-      background:var(--jaune);
-      border:none;
-      padding:12px 20px;
-      border-radius:30px;
-      font-size:16px;
-      cursor:pointer;
-      margin-top:12px;
-    }
-    button:hover{background:#ffeb3b}
-
-    /* QCM */
-    .answers{display:grid;grid-template-columns:1fr;gap:10px;margin-top:16px}
-    .answers button{background:var(--bleu);color:white}
-    .answers button:hover{background:#1565c0}
-
-    /* Positionnement */
-    #wrapper{position:relative}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MLE Runner – Mission Locale</title>
+<style>
+body{margin:0;font-family:Arial;background:#e3f2fd;display:flex;justify-content:center}
+#container{width:100%;max-width:900px}
+header{background:#1e88e5;color:#fff;padding:10px;display:flex;justify-content:space-between;font-size:14px}
+canvas{background:#f5f7fb;display:block}
+.overlay{position:absolute;inset:0;background:rgba(255,255,255,.95);display:flex;align-items:center;justify-content:center}
+.box{background:#fff;padding:20px;border-radius:12px;max-width:500px;width:100%;text-align:center}
+button{padding:12px 20px;border:none;border-radius:20px;background:#fdd835;font-size:16px;cursor:pointer}
+.answers button{background:#1e88e5;color:#fff;margin-top:8px;width:100%}
+#wrapper{position:relative}
+</style>
 </head>
 <body>
-  <div id="gameContainer">
-    <header>
-      <div id="consigne">Saute pour éviter les obstacles – Objectif : battre ton score</div>
-      <div id="score">Score : 0 | Niveau : 1</div>
-    </header>
-    <div id="wrapper">
-      <canvas id="game" width="900" height="400"></canvas>
-
-      <!-- Écran règles -->
-      <div class="overlay" id="rules">
-        <div class="box">
-          <h1>MLE Runner</h1>
-          <p>
-            • Appuie sur <strong>Espace</strong> ou touche l’écran pour sauter.<br>
-            • Évite les obstacles au sol et dans les airs.<br>
-            • Le jeu est infini et devient de plus en plus difficile.<br>
-            • En cas de défaite, réponds à une question professionnelle pour continuer.
-          </p>
-          <button onclick="startGame()">Démarrer le jeu</button>
-        </div>
-      </div>
-
-      <!-- Écran question -->
-      <div class="overlay" id="quiz" style="display:none">
-        <div class="box">
-          <h1>Question professionnelle</h1>
-          <p id="question"></p>
-          <div class="answers" id="answers"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+<div id="container">
+<header>
+<div id="consigne">Saute pour éviter les obstacles</div>
+<div id="score">Score : 0 | Niveau : 1</div>
+</header>
+<div id="wrapper">
+<canvas id="game" width="900" height="400"></canvas>
+<div class="overlay" id="start">
+<div class="box">
+<h2>MLE Runner</h2>
+<p>Espace ou touche écran pour sauter.<br>Jeu infini – bats ton score.</p>
+<button id="btnStart">Démarrer</button>
+</div>
+</div>
+<div class="overlay" id="quiz" style="display:none">
+<div class="box">
+<h3 id="q"></h3>
+<div class="answers" id="a"></div>
+</div>
+</div>
+</div>
+</div>
 <script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
-
-let running = false;
-let score = 0;
-let level = 1;
-let speed = 4;
-
-const player = {
-  x: 80,
-  y: 300,
-  r: 22,
-  vy: 0,
-  jump(){ if(this.y >= 300){ this.vy = -12; } }
-};
-
-let obstacles = [];
-
-const words = ["Mission Locale","Emploi","Formation","CV","Orientation","Insertion","Projet Pro","Compétences","Stage","Alternance"];
-
-const questions = [
-  {q:"À quoi sert un CV ?", a:["À se présenter à un employeur","À discuter avec des amis","À jouer"], c:0},
-  {q:"Qu'est-ce qu'une compétence ?", a:["Un jeu","Un savoir ou savoir-faire","Un diplôme"], c:1},
-  {q:"Pourquoi préparer un entretien ?", a:["Pour improviser","Pour être plus à l'aise","Ce n'est pas utile"], c:1}
+const canvas=document.getElementById('game');
+const ctx=canvas.getContext('2d');
+let running=false,score=0,level=1,speed=4;
+const player={x:80,y:300,r:22,vy:0};
+let obstacles=[];
+const questions=[
+{q:"À quoi sert un CV ?",a:["Se présenter","Jouer","Dessiner"],c:0},
+{q:"Pourquoi préparer un entretien ?",a:["Être à l'aise","Improviser","Dormir"],c:0}
 ];
-
-function startGame(){
-  document.getElementById('rules').style.display='none';
-  reset();
-  running = true;
-  requestAnimationFrame(update);
-}
-}
-
-function reset(){
-  score = 0;
-  level = 1;
-  speed = 4;
-  obstacles = [];
-}
-
-function addObstacle(){
-  const air = level >= 5 && Math.random() < 0.3;
-  obstacles.push({
-    x: canvas.width + 20,
-    y: air ? 240 : 320,
-    w: 30,
-    h: air ? 30 : 50,
-    air
-  });
-}
-
-function update(){
-  if(!running) return;
-
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  // Décor mots
-  ctx.fillStyle = "rgba(30,136,229,0.08)";
-  words.forEach((w,i)=>{
-    ctx.fillText(w, (i*200 - (score*0.5)%200), 80 + (i%3)*80);
-  });
-
-  // Joueur
-  player.vy += 0.6;
-  player.y += player.vy;
-  if(player.y > 300){ player.y = 300; player.vy = 0; }
-
-  ctx.beginPath();
-  ctx.arc(player.x, player.y, player.r, 0, Math.PI*2);
-  ctx.fillStyle = '#ffb74d';
-  ctx.fill();
-  ctx.lineWidth = 4;
-  ctx.strokeStyle = '#1e88e5';
-  ctx.stroke();
-  ctx.fillStyle = '#000';
-  ctx.font = '12px Arial';
-  ctx.textAlign='center';
-  ctx.fillText('MLE', player.x, player.y+4);
-
-  // Obstacles
-  obstacles.forEach(o=>{
-    o.x -= speed;
-    ctx.fillStyle = o.air ? '#e53935' : '#fdd835';
-    ctx.fillRect(o.x,o.y,o.w,o.h);
-
-    // Collision
-    const dx = Math.max(o.x - player.x, 0, player.x - (o.x + o.w));
-    const dy = Math.max(o.y - player.y, 0, player.y - (o.y + o.h));
-    if(dx*dx + dy*dy < player.r*player.r){ lose(); }
-  });
-
-  obstacles = obstacles.filter(o=>o.x+o.w>0);
-
-  if(Math.random() < 0.02) addObstacle();
-
-  score++;
-  if(score % 500 === 0){ level++; speed+=0.5; }
-
-  document.getElementById('score').innerText = `Score : ${score} | Niveau : ${level}`;
-
-  requestAnimationFrame(update);
-}
-
-function lose(){
-  running = false;
-  showQuiz();
-}
-
-function showQuiz(){
-  const q = questions[Math.floor(Math.random()*questions.length)];
-  document.getElementById('quiz').style.display='flex';
-  document.getElementById('question').innerText = q.q;
-  const answers = document.getElementById('answers');
-  answers.innerHTML='';
-  q.a.forEach((txt,i)=>{
-    const b = document.createElement('button');
-    b.innerText = txt;
-    b.onclick=()=>{
-      document.getElementById('quiz').style.display='none';
-      if(i===q.c){ running=true; requestAnimationFrame(update); }
-      else{ reset(); running=true; requestAnimationFrame(update); }
-    }
-    answers.appendChild(b);
-  });
-}
-
-window.addEventListener('keydown',e=>{ if(e.code==='Space') player.jump(); });
-canvas.addEventListener('touchstart',()=>player.jump());
-
+function start(){document.getElementById('start').style.display='none';reset();running=true;loop();}
+function reset(){score=0;level=1;speed=4;obstacles=[];player.y=300;player.vy=0;}
+function addObs(){const air=level>=5&&Math.random()<0.3;obstacles.push({x:canvas.width,y:air?240:320,w:30,h:air?30:50});}
+function loop(){if(!running)return;ctx.clearRect(0,0,900,400);
+player.vy+=0.6;player.y+=player.vy;if(player.y>300){player.y=300;player.vy=0}
+ctx.beginPath();ctx.arc(player.x,player.y,player.r,0,Math.PI*2);ctx.fillStyle='#ffb74d';ctx.fill();ctx.strokeStyle='#1e88e5';ctx.lineWidth=4;ctx.stroke();ctx.fillStyle='#000';ctx.textAlign='center';ctx.fillText('MLE',player.x,player.y+4);
+obstacles.forEach(o=>{o.x-=speed;ctx.fillStyle=o.y<300?'#e53935':'#fdd835';ctx.fillRect(o.x,o.y,o.w,o.h);
+if(o.x<player.x+player.r&&o.x+o.w>player.x-player.r&&o.y<player.y+player.r&&o.y+o.h>player.y-player.r){lose();}});
+obstacles=obstacles.filter(o=>o.x+o.w>0);
+if(Math.random()<0.02)addObs();score++;if(score%500===0){level++;speed+=0.5}
+document.getElementById('score').innerText=`Score : ${score} | Niveau : ${level}`;
+requestAnimationFrame(loop);}
+function lose(){running=false;showQuiz();}
+function showQuiz(){const qu=questions[Math.floor(Math.random()*questions.length)];document.getElementById('quiz').style.display='flex';document.getElementById('q').innerText=qu.q;const a=document.getElementById('a');a.innerHTML='';qu.a.forEach((t,i)=>{const b=document.createElement('button');b.innerText=t;b.onclick=()=>{document.getElementById('quiz').style.display='none';if(i===qu.c){running=true;loop()}else{start()}};a.appendChild(b);});}
+document.getElementById('btnStart').onclick=start;
+window.addEventListener('keydown',e=>{if(e.code==='Space')player.vy=-12});
+canvas.addEventListener('touchstart',()=>player.vy=-12);
 </script>
 </body>
 </html>
+
